# reason

./: .gitignore  README.md  bpe.py  compiler.py  first-order-minikanren.scm  higher-order-minikanren.scm  math.rkt  mk.scm  ml.scm  mu.scm  nas.ipynb  nas.rkt  naskanren.rkt  net.rkt  nm.scm  notes.org  numbers.scm  pprint.rkt  prompt_plan.md  pyproject.toml  rs.scm  simplify.rkt  spec.md  trainer.py  transformer.py  utils.py
examples/: english_grammar.py  nn_grammar.py  programming_grammar.py
kanren/: arch.rkt  evalo.rkt  nas.rkt  reason.rkt  strings.rkt  zipper.rkt
lit/: Makefile  dev.el  index.lit
neural/: problems.py  server.py  test_server.py
reason/: compiler.py  trainer.py
reason/interop/: process.py
reason/python/: __init__.py  scratch.py  trainer.py
reason/racket/: datagen-1.rkt  datagen.rkt  main.rkt  math.rkt  microk-fo.rkt  mk-fo.rkt  mk-syntax.rkt  simplify.rkt  strings.rkt  tools.rkt  utils.rkt  zipper.rkt
