[project]
name = "reason"
version = "0.0.1"
description = ""
authors = [
    {name = "Eric Ihli",email = "eihli@owoga.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "zmq (>=0.0.0,<0.0.1)",
    "torchvision (>=0.21.0,<0.22.0)",
    "matplotlib (>=3.10.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
