[project]
name = "reason"
version = "0.0.1"
description = "Python-Racket interop system"
authors = [
    {name = "Eric Ihli", email = "eihli@owoga.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.6.0,<3.0.0",
    "pyzmq>=24.0.0",
    "torchvision>=0.21.0,<0.22.0",
    "matplotlib>=3.10.0,<4.0.0",
    "tiktoken>=0.9.0,<0.10.0",
    "numpy>=2.2.3,<3.0.0"
]

[project.scripts]
reason-start = "reason.interop.process:start_all"
reason-python = "reason.python.main:main"
reason-racket = "reason.interop.process:start_racket"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["reason"]
include-package-data = true

[tool.setuptools.package-data]
reason = ["racket/*.rkt"]
